tests/my/good/good004.lat
int main() {
  string s;
  printString(s);
  printString(s);
  string ss;
  return 1;
}
