tests/my/bad/bad003.lat
int main() {
  string s;
  printString(s);
  printString(s);
  string s = s;
}
